fix header gap issue on watchlist.html

--- a/styles/style.css
+++ b/styles/style.css
@@ -303,6 +303,10 @@ img {
 }
 
 @media screen and (max-width: 700px) {
+  .header-watchlist {
+    gap: 2em;
+  }
+
   .content {
     gap: 3.5em;
     padding: 5.25em 4em 4em;
